removed grunt / eslint

--- a/test/index.html
+++ b/test/index.html
@@ -904,11 +904,11 @@
 
 
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="../dist/stickyfill.js"></script>
+    <script src="../dist/polyficky.js"></script>
 
     <script>
         $(function() {
-            Stickyfill.add($('.sticky'));
+            Polificky.add($('.sticky'));
 
             $('body').on('contextmenu', 'p', function(event) {
                 event.preventDefault();
